fix(zodiaclist): Update header background color and navbar text color for better visibility in style.css

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,7 +9,7 @@ body{
     background-color: rgb(0, 0, 0);
 }
 header{
-    background-color: rgb(240, 240, 240)
+    background-color: rgba(17, 17, 17, 0.658)
 }
 .navbar{
     display: flex;
@@ -24,7 +24,7 @@ header{
 }
 .navbar #Home{
     text-decoration: none;
-    color: rgb(0, 0, 0);
+    color: rgb(255, 255, 255);
     font-size: 15px;
     padding: 8px 12px;
     margin-left: 800px;
